--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
                             class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
                         >
                             <option value="korean">한국어</option>
-                            <option value="english">English</option>
+                            <option value="english">영어</option>
                         </select>
                     </div>
                     <button
