--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
                             name="content"
                             rows="6"
                             class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                            placeholder="요약할 텍스트를 입력하세요..."
+                            placeholder="텍스트 요약"
                             required
                         ></textarea>
                     </div>
